Fix the interpretation of the <local> proxy bypass rule.

The rule should just match simple hostnames, and previously was confused (both in implementation and consumers) into acting like a bypass for localhost.

The compatibility risk of changing its meaning (given this may be serialized in preferences or used by extensions) is low, since a previous change added implicit bypass on localhost. Hence the overall impact of fixing <local> now is just that IPv6 IP addresses are no longer bypassed. That IPv6 literals were being bypassed by the check was unexpected and a bug.

Bug: 902579, 902418
Change-Id: I5937048e3f927c66668e39e4ceb589ef8516e874
Reviewed-on: https://chromium-review.googlesource.com/c/1320849
Commit-Queue: Eric Roman <eroman@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607435}
Former-commit-id: 15242c0c52f055089ca410881dc049f43a2c4e62